samples/_failures_safe/1761152355_2cf072_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0db2813b.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_0db2813b.c:164:9: error: expected ‘:’ or ‘...’ at end of input
  164 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_0db2813b.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0db2813b.c:164:9: error: expected declaration or statement at end of input
